refactor: 支付链路收敛、订单查询归位、配置全量外置
- Dubbo 接口统一 Dubbo 后缀命名
- 支付回调收敛为唯一写路径，删除渠道台账与主动查单
- 订单状态查询迁入 order 域（GET /order/status）
- 端口/地址零硬编码，全量走 .env，模板见 .env.example